# AInsteinDSO

./: .env.example  .env.template  .gitignore  ADR_REASONING_ANALYSIS_REPORT.md  AInstein_CurrentStatus_ExpertAnalysis.docx  AInstein_CurrentStatus_ExpertAnalysis.txt  Dockerfile  EMBEDDING_INTEGRATION_FIX_PLAN.md  HARDCODED_SOLUTIONS_AUDIT.md  README.md  TECHNICAL_ARCHITECTURE_DOCUMENT.md  Technical_Implementation_Details.md  WORKFLOW.md  algorithmic_validation_report.md  claude.md  cli.py  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_web_demo.py  test_constants_working.py  test_conversation.py  test_ea_api_reranker.py  test_embedding_hardening.py  test_output.txt  verify_adr_embeddings.py
config/: homonym_lexicon.json  vocabularies.json
data/: document_index.json  energy_knowledge_graph.ttl  test_cases.json
diagrams/: 4RGC_Pipeline_Architecture.drawio.txt  Client_Server_Architecture.drawio  System_Context_Diagram.drawio.txt
docs/: AVAILABLE_CITATIONS.json  AVAILABLE_CITATIONS.md  CONFIGURATION.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  LOCAL_DEPLOYMENT.md  PHASE1_IMPLEMENTATION_PLAN.md  ambiguous_terms.json
scripts/: check_local_setup.py  check_sparql_fix.py  clean_knowledge_graph.py  comprehensive_quality_test.py  debug_archimate_structure.py  debug_kg_loading.py  debug_pdf_index.py  find_fake_citations.py  generate_full_kg.py  generate_massive_kg.py  measure_quality_improvement.py  quality_test_results.json  quick_quality_test.py  regenerate_embeddings_openai.py  test_api_reranker.py  test_early_query.py  test_integration_with_reranking.py  test_performance_slos.py  test_real_queries.py  test_web_agent.py  validate_kg.py  verify_archimate_fix.py  verify_fixes.py
src/: __init__.py
templates/: chat.html
(+121 files in other folders)
